--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.0",
     "react-localization": "^1.0.17",
     "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
